# text2sql

./: README.md  main.py  pyproject.toml
app/agent/: context.py  graph.py  llm.py  state.py
app/agent/nodes/: add_extra_context.py  correct_sql.py  extract_keywords.py  filter_metric.py  filter_table.py  generate_sql.py  merge_retrieved_info.py  recall_column.py  recall_metric.py  recall_value.py  run_sql.py  validate_sql.py
app/api/: dependencies.py  lifespan.py
app/api/routers/: query_router.py
app/client/: emdding_client_manager.py  es_client_manager.py  mysql_client_manager.py  qdrant_client_manager.py
app/config/: app_config.py
app/core/: log.py
app/pojo/: column_info.py  column_metric.py  metric_info.py  table_info.py
app/repositories/es/: value_repository.py
app/repositories/mysql/dw/: dw_mysql_repository.py
app/repositories/mysql/meta/: meta_mysql_repository.py
app/repositories/mysql/meta/mappers/: __init__.py  column_mapper.py  column_metric_mapper.py  metric_mapper.py  table_mapper.py
app/repositories/qdrant/: column_qdrant_repository.py  metric_qdrant_repository.py
app/scripts/: build_meta_knowledge.py
app/service_pojo/: __init__.py  column_metric_service_pojo.py  column_service_pojo.py  metric_service_pojo.py  table_service_pojo.py
app/services/: meta_knowledge_service.py  query_service.py
config/: app_config.yaml
docker/: docker-compose.yaml
docker/mysql/: dw.sql  meta.sql
